# ChangeLog for app-editors/emacs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-23.2-r3.ebuild,
  +files/emacs-23.2-ns-appdirs.patch:
  Incorporate changes from Alt/Prefix overlay and from bug 268793. Thanks to
  Matsui Tetsushi <VED03370@nifty.ne.jp> and Fabian Groffen.

  02 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r23.ebuild,
  emacs-22.3-r7.ebuild, emacs-23.2-r3.ebuild:
  Some die statements are not needed in EAPI 4.

  01 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r23.ebuild,
  emacs-22.3-r7.ebuild, emacs-23.2-r3.ebuild:
  Remove unnecessary automake dependency.

*emacs-23.2-r3 (31 Dec 2010)
*emacs-22.3-r7 (31 Dec 2010)
*emacs-21.4-r23 (31 Dec 2010)

  31 Dec 2010; Ulrich Mueller <ulm@gentoo.org> -emacs-21.4-r22.ebuild,
  +emacs-21.4-r23.ebuild, -emacs-22.3-r6.ebuild, +emacs-22.3-r7.ebuild,
  -emacs-23.2-r2.ebuild, +emacs-23.2-r3.ebuild:
  Don't compress GNU Info dir. Update ebuilds to EAPI 4.

*emacs-23.2-r2 (31 Dec 2010)
*emacs-22.3-r6 (31 Dec 2010)
*emacs-21.4-r22 (31 Dec 2010)

  31 Dec 2010; Ulrich Mueller <ulm@gentoo.org> +emacs-21.4-r22.ebuild,
  +emacs-22.3-r6.ebuild, +emacs-23.2-r2.ebuild, +metadata.xml:
  Copied from portage tree.
