@@ -8,6 +8,6 @@ DIST emacs-23.2.tar.bz2 38376047 RMD160 b7441be0a32e78e02f108dcb3b09b531c6849d95
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
 EBUILD emacs-21.4-r23.ebuild 5019 RMD160 83385af5aaed6fe97262908b040346e2278a5e9d SHA1 15c3ca2917d94b8dcb6a960bb4fc2959b0e85c46 SHA256 5a1d1f0df477f371eed9c256b5070d25742f6638f9ff2bf7ab20e5abcabf90db
 EBUILD emacs-22.3-r7.ebuild 7922 RMD160 c9443e4c4a89a6d8cfe736c3e06a973d56cc336c SHA1 89fa3bd31666854a9e42d9b02b06a8625213fd98 SHA256 d3fdfd8726b97aa6d2528e666aebe0d9ad39731af6a7ad34e9cfde1cec292f36
-EBUILD emacs-23.2-r3.ebuild 10936 RMD160 337a0bc6d8ae3e82a2192a1b1a9ec1f6978cceb3 SHA1 4cff774ef72f146101ff304b0448def73320d467 SHA256 b2c75d0965ab46d03902e645a7c299cdf6145308a4d02e63f9f108a70d542fe4
-MISC ChangeLog 1278 RMD160 7c3c071db2c934b649fdadc61d40fad381a13393 SHA1 7b8cd6153c8ffc06e3879f21a03a098abcf76445 SHA256 cb8649b394778f952e440f5ac2fab75e78199cb56b38cca1ffdd7aba77c84b7c
+EBUILD emacs-23.2-r3.ebuild 10993 RMD160 791717cdb4b660a1cac89492d0b5f63efcd60c75 SHA1 5269ef6f649558bed6907c35fc74d8abbb47dd91 SHA256 8b5a172c7fc9124e472f9c551ae610d93bb28210d93bb2563762e51a5f71f50b
+MISC ChangeLog 1424 RMD160 fafe98dbacdc24f68ef22e3eef45f2eff6781f1a SHA1 583c581e7f92a853b078cad0616800e48a312ae9 SHA256 4755e344a7d5fff9e6e82ad00a7a5cb8fdcefb66711828b353bee7007bfb21b8
 MISC metadata.xml 1745 RMD160 c60885ffe070e2e88f9a5b8def28fd20d05e5de3 SHA1 c4480fbafe47b334f878d9e87328e37c20cba56b SHA256 86f6e3328b4abfbf278876ab4ab7c546c5164713e736b14ad7cab4c68825d010
